--- a/css/taz.css
+++ b/css/taz.css
@@ -8,7 +8,7 @@ box-sizing:border-box;
 font-family: 'Oxygen', sans-serif;
 }
 html {
-font-size: 40% ;
+font-size: 50% ;
 /*1rem = 10px*/
 }
 h1,h2,h3,h4{
@@ -21,61 +21,69 @@ h1{
     font-weight: 600;
 }
 h2{
-    color:aqua;
-    font: size 50px; 
+    color:rgb(0,191,255);
+    font-size: 50px; 
     font-weight: 500;
 }
 h3{
+    color:rgb(0,191,255) ;
     font-size:1.8rem;
     font-weight: 400;
 }
 p {
-    color:blue;
+    color:black;
     line-height:1.6 ;
-    font-size:1.7rem ;
+    font-size:2.7rem ;
 }
 .list {
     list-style: none;
+    font-size:10% ;
 }
 
-.header{
+.navbar{
 padding:0 4.8rem;
 height:10rem;
-background-color:lightblue;
+background-color:rgb(255,255,255);
 /*background:black ;*/
 display:flex;
 justify-content: space-between;
 align-items: center;
 }
-.header.logo{
+.logo{
     height:3rem;
 }
 .navbar-list{
    display: flex; 
-   size: 20px; 
+   font-size: 20px; 
    gap:4.8rem;
- background-color:black;
+ background-color:rgb(222, 203, 203);
  list-style:none ;
 }
-.navbar-link:link,
-.navbar-link:visited {
-  display:inline-block;  
-  text-decoration:none;
-  font-size:1.8rem;
-  font-weight:500;
-  text-transform:uppercase ;
-  color: bisque;
-}
+.triangle-down {
+    width: 0;
+    height: 0;
+    display: inline-flex;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-top: 10px solid #555;}
+
+
+
+
+
 .btn1{
     background:saddlebrown;
     display:flex;
+    font-size:20Px ;
 }
 .section{
     padding: 9rem;
     gap:9rem;
 }
+
+
 .container{
-    max-width:140rem ;
+    max-width:40rem ;
     margin:0 auto ;
 }
 .grid{
@@ -87,7 +95,7 @@ align-items: center;
 }
 /*hero section start*/
 .section-hero{
-    background-color: aquamarine;
+    background-color:#4fdce3;
 } 
 
 
@@ -96,6 +104,8 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 }
+
+
 
 .hero-top-data{
 text-transform: uppercase;
@@ -116,20 +126,32 @@ font-size:6.4rem;
     max-width: 60rem; 
 }
 
-.hero.img{
-    max-width:80% ;
-}
 .btn{
     background:saddlebrown;
     padding:1.6rem 3.2rem ;
     border:blue;
-    color: aliceblue;
+   /* color: aliceblue;*/
     display:inline-block;
     text-transform:uppercase;
-    font: size 1.8rem; 
+    font-size: 1.8rem; 
     font-weight: 500;
-     cursor:pointer ;   
+     cursor:pointer ; 
+     width:30%  
+     border
 }
+.hero.image{
+    max-width:50% ; 
+}
+    
+
+.header.png{
+ border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+  float:right;
+}
+
 .portfolio{
 width:90%;
 margin:50px auto;
@@ -142,25 +164,8 @@ grid-template-columns:1fr 1fr 1fr;
 grid-column-gap: 20px; */
 grid-gap: 20px;
 }
-.div1{
-    background-color: blanchedalmond;}
-
-.div2{
-    background-color: orangered;}
-
-.div3{
-    background-color: whitesmoke;}
-
-.div4{
-    background-color: aquamarine;}
-
-.div5{
-    background-color: brown;}
-
-.div6{
-    background-color:peachpuff;
-}
-/*bio section*/
+.div1,.div2,.div3,.div4,.div5,.div6{
+    background-color: rgb(240,248,255);}
 .commonheading{
     font-size:4.8rem ;
     font-weight: 600;
@@ -195,11 +200,13 @@ align-items: center;
 .school-image2{
     width:20% ;
     height:20% ;
+    display:flex;
+    flex-direction:column ;
     justify-content:center;
     align-items: center;
 }
 .schoolbtn{
-    right:10px ;
+ right:10px ;
 text-align: center;
-border-radius:5px ;
+border-radius:20px ;
 }
