--- a/css/14.css
+++ b/css/14.css
@@ -5,13 +5,11 @@
 }
 header {
   width: 100%;
-  height: 10vh;
+  height: 12vh;
   background-color: white;
- /* background-image: linear-gradient(
-    19deg,
-    hsl(179, 100%, 50%) hsl(179, 100%, 50%)
-  position: relative;*/
+  box-shadow:  1px 1px 10px 1px #ccc;
 }
+
 nav {
   width: 100%;
   height: 10vh;
@@ -29,19 +27,19 @@ nav {
 .menu ul li {
   list-style: none;
   display: inline-block;
-  padding: 10px 35px;
 }
 .menu ul li a {
   text-transform:inherit;
-  margin-inline: 20px;
+  margin:2px 2px 2px 2px;
+  padding:10px 2px 2px 10px;
 }
-.active,
+/* .active,
 ul li:hover {
   border-top: soild #5dade2;
   position: absolute;
   cursor: pointer;
-  /*border-bottom:2px solid#5dade2 ;*/
-}
+  /*border-bottom:2px solid#5dade2 ;
+} */
 .triangle-down {
   width: 0;
   height: 0;
@@ -51,11 +49,30 @@ ul li:hover {
   border-top: 10px solid #5dade2;
 }
 .contact_btn {
-  background-color: #5dade2;
-  padding: 12px 26px;
-  font-style: 14px;
+  background-color: #14a2b8;
   font-weight: 500;
+  padding:5px 18px 5px 18px;
   border: 1px solid transparent;
-  text-transform: capitalize;
   border-radius:20px ;
+  font-size: 0.9em;
+}
+
+.my-menu-button,
+ul li a
+{
+  text-decoration:none; 
+  color:#556; 
+  font-weight: 500; 
+  font-size:1em;
+  font-family:'Times New Roman', Times, serif;
+}
+
+.active {
+  color: #5dade2;
+}
+
+.contact_btn a{
+  font-family:'Times New Roman', Times, serif;
+  text-decoration:none; 
+  color: #fff;
 }
